--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome to our website!</title>
-</head>
-<body>
-
-</body>
-</html>
+<h1 style="font-size:3em; "> Welcome to our website! </h1>
